# project_scaffolding

./: .coverage  .gitignore  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
docker/: Dockerfile.dev
migrations/: env.py
migrations/versions/: 02701a526a26_create_users_table_fastapi_users_ext.py
src/: main.py
src/core/infrastructure/: settings.py
src/modules/user/application/: register_user.py
src/modules/user/domain/: repository.py  user.py
src/modules/user/infrastructure/: __init__.py  sqlmodel_user_repo.py  user_model.py
tests/modules/user/integration/: conftest.py  test_register_user_integration.py
tests/modules/user/unit/: fake_user_repo.py  test_register_user.py
